fix reflection problem, gradle build and test job work